--- a/src/html/index.html
+++ b/src/html/index.html
@@ -11,6 +11,9 @@
   <!-- Boxicons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
+  <!-- Libs -->
+  <link rel="stylesheet" href="css/libs.min.css">
+
   <!-- CSS -->
   <link rel="stylesheet" href="css/style.min.css">
 
@@ -18,6 +21,10 @@
 </head>
 <body>
   @@include('layout/header.html')
+
+  <main class="main">
+    @@include('include/home.html')
+  </main>
   
   <!-- JavaScript -->
   <script src="js/app.min.js"></script>
