Category Section & Change BG Header

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,6 +24,8 @@
 
   <main class="main">
     @@include('include/home.html')
+
+    @@include('include/category.html')
   </main>
   
   <!-- JavaScript -->
