--- a/src/html/index.html
+++ b/src/html/index.html
@@ -26,6 +26,8 @@
     @@include('include/home.html')
 
     @@include('include/category.html')
+
+    @@include('include/about.html')
   </main>
   
   <!-- JavaScript -->
