Trick Or Treat Section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -28,6 +28,8 @@
     @@include('include/category.html')
 
     @@include('include/about.html')
+
+    @@include('include/trick.html')
   </main>
   
   <!-- JavaScript -->
