--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,6 +30,8 @@
     @@include('include/about.html')
 
     @@include('include/trick.html')
+
+    @@include('include/discount.html')
   </main>
   
   <!-- JavaScript -->
