New Arrivals Section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -32,6 +32,8 @@
     @@include('include/trick.html')
 
     @@include('include/discount.html')
+
+    @@include('include/new.html')
   </main>
   
   <!-- JavaScript -->
