Our Newsletter Section

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -34,6 +34,8 @@
     @@include('include/discount.html')
 
     @@include('include/new.html')
+
+    @@include('include/newsletter.html')
   </main>
   
   <!-- JavaScript -->
