--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,6 +37,8 @@
 
     @@include('include/newsletter.html')
   </main>
+
+  @@include('layout/footer.html')
   
   <!-- JavaScript -->
   <script src="js/app.min.js"></script>
