--- a/src/html/index.html
+++ b/src/html/index.html
@@ -39,6 +39,8 @@
   </main>
 
   @@include('layout/footer.html')
+
+  @@include('elements/scrollup.html')
   
   <!-- JavaScript -->
   <script src="js/app.min.js"></script>
